<resources>
    <string name="app_name">My Application</string>
    <string name="location">Perm</string>
    <string name="maidDegree">21°</string>
    <string name="time">Night</string>
    <string name="timeMorning">Morning</string>
    <string name="timeDay">Day</string>
    <string name="timeEvening">Evening</string>
    <string name="enter_location">Enter location</string>
    <string name="myLocation">Location</string>
    <string name="make_it_home_location">make it home location</string>
    <string name="home">Home</string>
    <string name="other_city">Other city</string>
    <string name="otherCity">Other city</string>
    <string name="my_city">Home</string>
    <string name="change_lct">Change location</string>


</resources>