<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66459EED"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        app:srcCompat="@drawable/city"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/chosenLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myLocation"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/enterLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location"
        tools:ignore="Autofill,TextFields" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_city" />

        <RadioButton
            android:id="@+id/radiobtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherCity" />
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>
