<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityLiveRegion="polite"
    android:background="#99FFFFFF"
    android:backgroundTint="@android:color/transparent"
    android:backgroundTintMode="src_over"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:backgroundTint="#99459EED"
        android:backgroundTintMode="src_over"
        android:cropToPadding="true"
        android:duplicateParentState="false"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="68dp"
        android:fontFamily="cursive"
        android:text="@string/location"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainDegree"
        android:layout_width="74dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif-black"
        android:padding="5dp"
        android:text="@string/maidDegree"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="151dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/mainDegree"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:srcCompat="@drawable/weather_cloudy_sun" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:fontFamily="cursive"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:fontFamily="cursive"
        android:text="@string/timeMorning"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:fontFamily="cursive"
        android:text="@string/timeDay"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:fontFamily="cursive"
        android:text="@string/timeEvening"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="15°"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="18°"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="23°"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="19°"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="385dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="299dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
